--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0;url=https://www.linkedin.com/in/yourprofile" />
+    <meta http-equiv="refresh" content="0;url=https://www.linkedin.com/in/martin-curic" />
     <title>Redirecting...</title>
   </head>
   <body>
-    <p>Oops if you see this.. please <a href="https://www.linkedin.com/in/yourprofile">click here</a>.</p>
+    <p>Oops if you see this.. please <a href="https://www.linkedin.com/in/martin-curic">click here</a>.</p>
   </body>
 </html>
